CATTY-503 Appearance of Formula Editor

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -707,6 +707,9 @@
 "Forgot password" = "Forgot password";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "Formula too long!";
 
 /* No comment provided by engineer. */
