CATTY-468: Create Stitch Brick
CATTY-468: Create all Files


CATTY-468: Print Line


CATTY-469: AddPoint


CATTY-468: small Change for a define


CATTY-468: Add Tests part 1


CATTY-468: Add Tests


CATTY-468: Modify CBSpriteNodeStitchExtension


CATTY-468: Update UIDefine


CATTY-468: Update LanguageTranslationDefines


CATTY-468: LanguageTranslationDefine


CATTY-468: CR changes


CATTY-468: Thread Safe now


CATTY-468 rename drawingStack to drawEmbroideryQueue


CATTY-468: rename


Catty-468: Change order in category


CATTY-468: swiftlint error


CATTY-469: Change line width of stitch


CATTY-468: Add Tests


CATTY-468: Swiftlint Error


CATTY-468: Swiftlint Error


CATTY-468: Change Test. Add Subtext


CATTY-468: Add subheader


CATTY-468: Bug fixing

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -353,6 +353,9 @@
 "Create account" = "Create account";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "Data";
 
 /* No comment provided by engineer. */
@@ -567,6 +570,12 @@
 
 /* No comment provided by engineer. */
 "Email" = "Email";
+
+/* No comment provided by engineer. */
+"Embroidery" = "Embroidery";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Embroidery extension";
 
 /* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
@@ -1632,6 +1641,9 @@
 
 /* No comment provided by engineer. */
 "steps" = "steps";
+
+/* No comment provided by engineer. */
+"Stitch" = "Stitch";
 
 /* No comment provided by engineer. */
 "Stop all sounds" = "Stop all sounds";
