CATTY-463 Implement SetBackgroundAndWaitBrick

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1607,6 +1607,9 @@
 "Set background" = "Set background";
 
 /* No comment provided by engineer. */
+"Set background and wait" = "Set background and wait";
+
+/* No comment provided by engineer. */
 "Set brightness " = "Set brightness ";
 
 /* No comment provided by engineer. */
