CATTY-517 New Formula Editor keyboard

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1412,6 +1412,9 @@
 "Projects on device" = "Projects on device";
 
 /* No comment provided by engineer. */
+"Properties" = "Properties";
+
+/* No comment provided by engineer. */
 "random position" = "random position";
 
 /* No comment provided by engineer. */
