--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "About Pocket Code";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "acceleration x";
 
 /* No comment provided by engineer. */
@@ -99,6 +102,15 @@
 
 /* No comment provided by engineer. */
 "April" = "April";
+
+/* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
 
 /* No comment provided by engineer. */
 "Arduino" = "Arduino";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Catrobat community";
 
 /* No comment provided by engineer. */
-"ceil" = "ceil";
+"ceiling" = "ceiling";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -353,6 +365,9 @@
 "Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "Create account";
 
 /* No comment provided by engineer. */
@@ -375,6 +390,9 @@
 
 /* No comment provided by engineer. */
 "December" = "December";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "degrees";
@@ -647,6 +665,9 @@
 "Event" = "Event";
 
 /* No comment provided by engineer. */
+"exponent" = "exponent";
+
+/* No comment provided by engineer. */
 "FA" = "FA";
 
 /* No comment provided by engineer. */
@@ -854,6 +875,9 @@
 "italic" = "italic";
 
 /* No comment provided by engineer. */
+"item" = "item";
+
+/* No comment provided by engineer. */
 "Jan" = "Jan";
 
 /* No comment provided by engineer. */
@@ -995,6 +1019,9 @@
 "Maximize" = "Maximize";
 
 /* No comment provided by engineer. */
+"maximum of" = "maximum of";
+
+/* No comment provided by engineer. */
 "May" = "May";
 
 /* No comment provided by engineer. */
@@ -1019,6 +1046,9 @@
 "Minimize" = "Minimize";
 
 /* No comment provided by engineer. */
+"minimum of" = "minimum of";
+
+/* No comment provided by engineer. */
 "minute" = "minute";
 
 /* paint */
@@ -1026,6 +1056,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Mo";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mole";
@@ -1092,6 +1125,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Name already exists.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
 
 /* No comment provided by engineer. */
 "New" = "New";
@@ -1256,6 +1292,9 @@
 "phiro side right" = "phiro side right";
 
 /* No comment provided by engineer. */
+"pi" = "pi";
+
+/* No comment provided by engineer. */
 "Piano" = "Piano";
 
 /* paint */
@@ -1340,6 +1379,9 @@
 "position y" = "position y";
 
 /* No comment provided by engineer. */
+"power" = "power";
+
+/* No comment provided by engineer. */
 "Preview" = "Preview";
 
 /* No comment provided by engineer. */
@@ -1370,6 +1412,9 @@
 "random position" = "random position";
 
 /* No comment provided by engineer. */
+"random value from to" = "random value from to";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Rate Us";
 
 /* No comment provided by engineer. */
@@ -1392,6 +1437,9 @@
 
 /* No comment provided by engineer. */
 "Registration successful" = "Registration successful";
+
+/* No comment provided by engineer. */
+"regular expression" = "regular expression";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Remove known devices";
@@ -1589,6 +1637,9 @@
 "Show variable" = "Show variable";
 
 /* No comment provided by engineer. */
+"sine" = "sine";
+
+/* No comment provided by engineer. */
 "size" = "size";
 
 /* No comment provided by engineer. */
@@ -1618,11 +1669,11 @@
 /* No comment provided by engineer. */
 "Speed" = "Speed";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "square";
+
+/* No comment provided by engineer. */
+"square root" = "square root";
 
 /* No comment provided by engineer. */
 "stage is touched" = "stage is touched";
@@ -1683,6 +1734,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Tap \"+\" to add actors or objects";
