CATTY-344-PPPP-Create-a-"Set-tempo-to-[1]"-Brick

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1613,6 +1613,9 @@
 "Set size to" = "Set size to";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Set tempo to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Set transparency ";
 
 /* No comment provided by engineer. */
