--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -17,6 +17,9 @@
 "About Pocket Code" = "About Pocket Code";
 
 /* No comment provided by engineer. */
+"About us" = "About us";
+
+/* No comment provided by engineer. */
 "acceleration x" = "acceleration x";
 
 /* No comment provided by engineer. */
@@ -234,6 +237,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "Catrobat community";
+
+/* No comment provided by engineer. */
+"Catrobat website" = "Catrobat website";
 
 /* No comment provided by engineer. */
 "ceil" = "ceil";
@@ -1935,6 +1941,9 @@
 
 /* No comment provided by engineer. */
 "View" = "View";
+
+/* No comment provided by engineer. */
+"View Terms of Use and Service" = "View Terms of Use and Service";
 
 /* No comment provided by engineer. */
 "Views" = "Views";
