Updated test cases + code refactor

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1526,7 +1526,7 @@
 "Select Phiro" = "Select Phiro";
 
 /* No comment provided by engineer. */
-"Sending anonymous crash reports" = "Sending anonymous crash reports";
+"Send anonymous crash reports" = "Send anonymous crash reports";
 
 /* No comment provided by engineer. */
 "Sensors" = "Sensors";
