--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1883,6 +1883,9 @@
 "Turn right" = "Turn right";
 
 /* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
+
+/* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
 
 /* No comment provided by engineer. */
