CATTY-508-Import-sound-from-files

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1568,6 +1568,9 @@
 "Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
+"Select file" = "Select file";
+
+/* No comment provided by engineer. */
 "Select logical operator" = "Select logical operator";
 
 /* No comment provided by engineer. */
